--- a/configs/config_base.yaml
+++ b/configs/config_base.yaml
@@ -2,21 +2,31 @@ seed: 42
 run_name: run-01
 
 train:
-  epochs: 30
-  warmup_ratio: 0.06
+  epochs: 35
+  learning_rate: 2e-4
   weight_decay: 0.01
-  fp16: true
+  lr_scheduler_type: cosine           # valid values: linear, cosine, cosine_with_restarts, polynomial, constant, constant_with_warmup
+  warmup_ratio: 0.06                  # or set num_warmup_steps instead
+  optim: adamw_torch
+
+  # precision & memory
+  bf16: true
+  fp16: false
   gradient_checkpointing: true
   batch_size: auto
   grad_accum: auto
-  eval_strategy: steps
-  eval_steps: 200
+
+  # logging / eval / save
+  logging_steps: 1                    # see frequent logs in TB
+  evaluation_strategy: steps          # HF name in 4.55 is evaluation_strategy
+  eval_steps: 1                       # tiny dataset -> evaluate every step
   save_strategy: steps
-  save_steps: 200
+  save_steps: 10                      # save periodically without spamming
   save_total_limit: 3
+  load_best_model_at_end: true
   metric_for_best_model: rougeL
   greater_is_better: true
-  load_best_model_at_end: true
+
   output_dir: outputs/run-01
 
 data:
@@ -29,4 +39,4 @@ data:
 
 logging:
   backend: tensorboard
-  log_interval: 20
+  log_interval: 1
