--- a/configs/config_base.yaml
+++ b/configs/config_base.yaml
@@ -2,7 +2,7 @@ seed: 42
 run_name: run-01
 
 train:
-  epochs: 35
+  epochs: 3
   learning_rate: 2e-4
   weight_decay: 0.01
   lr_scheduler_type: cosine           # valid values: linear, cosine, cosine_with_restarts, polynomial, constant, constant_with_warmup
@@ -24,8 +24,8 @@ train:
   save_steps: 10                      # save periodically without spamming
   save_total_limit: 3
   load_best_model_at_end: true
-  metric_for_best_model: rougeL
-  greater_is_better: true
+  metric_for_best_model: eval_loss
+  greater_is_better: false
 
   output_dir: outputs/run-01
 
@@ -33,8 +33,8 @@ data:
   format: chat
   template_path: chat_templates/default.jinja
   split:
-    train_ratio: 0.6
-    val_ratio: 0.2
+    train_ratio: 0.7
+    val_ratio: 0.1
     test_ratio: 0.2
 
 logging:
