--- a/configs/run_bnb.yaml
+++ b/configs/run_bnb.yaml
@@ -1,33 +1,10 @@
 include: configs/config_base.yaml
 
-model:
-  name: Qwen/Qwen2.5-1.5B-Instruct     # HF repo_id OR local folder path
-  local_dir: models/qwen2.5-3b       # where to store/download the model
-  revision: main                     # optional: tag/sha
-  trust_remote_code: true            # some repos need this
-  type: causal
-  max_seq_len: 512
-
+# BnB-specific overrides
 tuning:
-  mode: qlora          # qlora | lora | full
   backend: bnb         # BitsAndBytes backend
-  lora:
-    r: 32
-    alpha: 64
-    dropout: 0.05
-    target_modules: auto
 
 train:
   bf16: false          # BitsAndBytes works best with fp16
   fp16: true
   output_dir: outputs/run-bnb
-  evaluation_strategy: steps
-  save_strategy: steps
-  eval_steps: 10
-  save_steps: 10
-
-data:
-  train_path: data/processed/train.jsonl
-  val_path:   data/processed/val.jsonl
-  test_path:  data/processed/test.jsonl
-  cache_dir: data/cache
