--- a/configs/run_unsloth.yaml
+++ b/configs/run_unsloth.yaml
@@ -1,33 +1,13 @@
 include: configs/config_base.yaml
 
-model:
-  name: Qwen/Qwen2.5-1.5B-Instruct     # HF repo_id OR local folder path
-  local_dir: models/qwen2.5-3b       # where to store/download the model
-  revision: main                     # optional: tag/sha
-  trust_remote_code: true            # some repos need this
-  type: causal
-  max_seq_len: 512
-
+# Unsloth-specific overrides
 tuning:
-  mode: qlora          # qlora | lora | full
   backend: unsloth     # Unsloth backend
   lora:
-    r: 32
-    alpha: 32
-    dropout: 0.05
-    target_modules: auto
+    alpha: 32          # Unsloth prefers alpha = r
 
 train:
   bf16: true           # Unsloth works better with bfloat16
   fp16: false
+  eval_steps: 1        # More frequent evaluation for Unsloth
   output_dir: outputs/run-unsloth
-  evaluation_strategy: steps
-  save_strategy: steps
-  eval_steps: 1
-  save_steps: 10
-
-data:
-  train_path: data/processed/train.jsonl
-  val_path:   data/processed/val.jsonl
-  test_path:  data/processed/test.jsonl
-  cache_dir: data/cache
