--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+# Core ML dependencies
 torch>=2.2
 transformers>=4.42
 datasets
-accelerate
 peft
 bitsandbytes
 jinja2
@@ -19,6 +19,10 @@ unsloth
 tf-keras
 sacremoses
 python-docx
+
+# Multi-GPU and distributed training
+accelerate>=0.21.0
+deepspeed>=0.10.0
 
 # Testing dependencies
 pytest>=7.0.0
