--- a/configs/run_distributed.yaml
+++ b/configs/run_distributed.yaml
@@ -1,64 +1,75 @@
 include: configs/config_base.yaml
 
-# Generic Distributed Training Configuration
-# Works with any model size and GPU setup (auto-optimized)
-
+# =====================================
+# MODEL
+# =====================================
 model:
-  name: Qwen/Qwen2.5-3B-Instruct  # Default model (change as needed)
-  local_dir: models/qwen2.5-3b     # Auto-generated from model name
-  max_seq_len: 2048                # Extended context for distributed training
+  name: Qwen/Qwen2.5-1.5B-Instruct     # Swap with Gemma, LLaMA, etc.
+  local_dir: models/qwen2.5-3b       # Auto-downloaded if not cached
+  max_seq_len: 2048                  # Context length
   trust_remote_code: true
   type: causal
 
+# =====================================
+# TUNING
+# =====================================
 tuning:
-  mode: qlora                      # Memory-efficient (supports bnb and unsloth)
-  backend: bnb                     # BitsAndBytes (stable) or unsloth (faster)
+  mode: qlora
+  backend: bnb                       # Stable for multi-GPU
   lora:
-    r: 64                          # Higher rank for better performance
-    alpha: 128                     # Scaled alpha
-    dropout: 0.1                   # Regularization
-    target_modules: auto           # Auto-detect target modules
+    r: 32
+    alpha: 64
+    dropout: 0.1
+    target_modules: auto
 
+# =====================================
+# TRAINING
+# =====================================
 train:
-  epochs: 3
-  learning_rate: 1.0e-4            # Conservative LR for large models
+  steps: 10
+  learning_rate: 1.0e-4
   weight_decay: 0.01
   lr_scheduler_type: cosine
   warmup_ratio: 0.06
   optim: adamw_torch
 
-  # Precision (auto-detected based on GPU)
-  bf16: true                       # Optimal for modern GPUs (H100/H200/RTX40xx)
+  # Precision
+  bf16: true                         # Best for H100/H200
   fp16: false
-  gradient_checkpointing: true     # Essential for memory efficiency
+  gradient_checkpointing: true       # Save VRAM
 
-  # Multi-GPU batch sizing (auto-calculated)
-  batch_size: auto                 # Auto-calculated based on available VRAM
-  grad_accum: auto                 # Auto-calculated for effective batch size
+  # Multi-GPU (auto-calculated by script if set "auto")
+  batch_size: auto
+  grad_accum: auto
 
-  # Distributed training optimizations
-  dataloader_num_workers: 4        # Parallel data loading
-  dataloader_pin_memory: false     # Avoid memory issues with multi-GPU
+  # Runtime optimizations
+  dataloader_num_workers: 4
+  dataloader_pin_memory: false
 
-  # Checkpointing and logging with run name
-  run_name: distributed-training   # Used for output directory and logging
-  logging_steps: 1
-  evaluation_strategy: steps
-  eval_steps: 50                   # Frequent evaluation
-  save_strategy: steps
-  save_steps: 100                  # Regular checkpointing
-  save_total_limit: 5              # Keep more checkpoints for distributed training
+  # Run naming + logging
+  run_name: qwen2.5-3b-dp-eval-test
+  logging_steps: 5                   # More frequent logging
+  report_to: tensorboard
+
+  # Eval & checkpointing
+  evaluation_strategy: "steps"       # Enable validation during training
+  eval_steps: 10                     # Eval every 10 steps
+  save_strategy: "steps"
+  save_steps: 10                     # Save checkpoint every 10 steps
+  save_total_limit: 3
   load_best_model_at_end: true
-  metric_for_best_model: eval_loss
-  greater_is_better: false
-  
-  # Resume training support
-  resume_from_checkpoint: auto     # Auto-detect latest checkpoint
-  
-  # Output directory based on run name
-  output_dir: outputs/distributed-training
+  metric_for_best_model: "rougeL"
+  greater_is_better: true
 
-# Data configuration
+  # Resume
+  resume_from_checkpoint: auto
+
+  # Output dir
+  output_dir: outputs/qwen2.5-3b-dp-eval-test
+
+# =====================================
+# DATA
+# =====================================
 data:
   format: chat
   template_path: chat_templates/default.jinja
@@ -71,8 +82,13 @@ data:
     val_ratio: 0.1
     test_ratio: 0.2
 
-# Logging configuration
+# =====================================
+# LOGGING
+# =====================================
 logging:
   backend: tensorboard
-  log_interval: 1
-  # Logs will be stored under outputs/{run_name}/logs/
+  log_interval: 10
+# =====================================
+# DEEPSPEED
+# =====================================
+#deepspeed: configs/deepseed_z2.yaml
