--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,14 +35,27 @@ dependencies = [
     "rouge-score",
     "sacrebleu",
     "tensorboard",
-    "pyyaml",
-    "tqdm",
+    "PyYAML>=6.0.1",
+    "tqdm>=4.66.0",
+    "scipy>=1.11.0",
+    "numpy>=1.26.0",
+    "pandas>=2.2.1",
+    "scikit-learn>=1.4.0",
+    "unsloth",
+    "tf-keras",
+    "sacremoses",
+    "python-docx>=1.1.2",
+    "requests>=2.32.0",
+    "pdfminer.six>=20221105",
+    "tiktoken>=0.7.0",
+    "sentence-transformers>=3.0.1",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest",
-    "pytest-cov",
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
     "black",
     "isort",
     "flake8",
