--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "A plug-and-play Supervised Fine-Tuning template for small GPUs"
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [
-    {name = "SFT-Play Contributors"}
+    {name = "Play Contributors"}
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
