--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "sft-play"
+name = "xyne-play"
 version = "0.1.0"
-description = "A plug-and-play Supervised Fine-Tuning template for small GPUs"
+description = "A universal LLM fine-tuning CLI tool for any hardware and model size"
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [
@@ -72,16 +72,16 @@ trackio = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/your-username/sft-play"
-Repository = "https://github.com/your-username/sft-play"
-Documentation = "https://github.com/your-username/sft-play#readme"
-"Bug Tracker" = "https://github.com/your-username/sft-play/issues"
+Homepage = "https://github.com/your-username/xyne-play"
+Repository = "https://github.com/your-username/xyne-play"
+Documentation = "https://github.com/your-username/xyne-play#readme"
+"Bug Tracker" = "https://github.com/your-username/xyne-play/issues"
 
 [project.scripts]
-sft-process = "scripts.process_data:main"
-sft-train = "scripts.train:main"
-sft-eval = "scripts.eval:main"
-sft-infer = "scripts.infer:main"
+xyne-process = "scripts.process_data:main"
+xyne-train = "scripts.train:main"
+xyne-eval = "scripts.eval:main"
+xyne-infer = "scripts.infer:main"
 
 [build-system]
 requires = ["hatchling"]
