Add aider and google-cloud-sdk to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,10 @@ yarn-error.log*
 
 models/*
 !models/.gitkeep
+
+# Aider benchmark tool
+Benchmark/Polyglot/aider/
+aider/
+
+# Google Cloud SDK
+google-cloud-sdk/
