--- a/Benchmark/model_config.yaml
+++ b/Benchmark/model_config.yaml
@@ -5,11 +5,11 @@
 api_base: "API_BASE"  # e.g., "https://api.yourmodel.com/v1"
 
 # Model Names - choose which model to test
-model_name: "MODEL_NAME"
+model_name: "glm-latest"
 
 
 # API Authentication (optional)
-api_key: ""  # Leave blank if not required
+api_key: "sk-xyz"  # Leave blank if not required
 
 # Benchmark Settings
 benchmark:
@@ -39,4 +39,5 @@ rust_evo_setup: 1 # For RustEvo setup
     # 4. Run RQ3 Only (Minimal Documentation)
     # 5. Run Both RQ1 & RQ3
     # 6. Exit
-workers: 8    # For RustEvo setup
+workers_rq1: 8     # For RustEvo setup
+workers_rq3: 8     # For RustEvo setup
